--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,17 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+
 }
 
 .heart {
   width: 10rem;
   height: 10rem;
   margin: 2rem;
+  transition: transform 0.3s ease;
+}
+.heart:hover {
+  transform: scale(1.1);
 }
 
 .heart-img {
